# decrypt_ncm

./: Cargo.toml  LICENSE  README.md
src/: decrypt.rs  file.rs  keybox.rs  main.rs  metadata.rs
