[package]
name = "decrypt_ncm"
version = "0.1.0"
edition = "2024"
authors = ["ArkDra", "arkdra@qq.com"]
description = "A NCM file decrypt tool"
repository = "https://github.com/ArkDra/decrypt_ncm"
license = "MIT"

[profile.release]
debug = false
lto = true

[dependencies]
aes = "0.8.4"
base64 = "0.22.1"
ecb = "0.1.2"
lofty = "0.22.4"
rayon = "1.10.0"
serde_json = "1.0.140"